<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/list_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="android.example.com.bakingapp.RecipeList.RecipeListActivity">

    <LinearLayout
        android:id="@+id/list_llayout"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:name="android.example.com.bakingapp.RecipeList.RecipeFragment"
            android:background="@color/colorAccent"
            android:id="@+id/recipe_list_framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </fragment>

    </LinearLayout>
</ScrollView>
